--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ body {
     height: 100vh;
     width: 100vh;
     margin: 0;
-
     align-items: center;
 }
 
@@ -14,6 +13,12 @@ button {
     width: 200px;
     height: 50px;
     margin: 10px;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 .container {
@@ -35,8 +40,6 @@ button {
 .row {
     flex: 1;
     width: auto;
-    border-style: solid;
-    border-width: 0.5px;
 }
 
 .row:hover {
